kubernetes/infra/knative-serving/serving/app/disable-istio-system-pods.yaml
---
# Disable Istio injection for KNative system deployments
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  namespace: knative-serving
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activator
  namespace: knative-serving
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoscaler
  namespace: knative-serving
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoscaler-hpa
  namespace: knative-serving
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  namespace: knative-serving
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: net-istio-controller
  namespace: knative-serving
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: net-istio-webhook
  namespace: knative-serving
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
