kubernetes/infra/knative-serving/serving/app/gateway-patch.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/gateway_v1.json
---
# Override the knative-ingress-gateway to use your custom gateway selector
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: knative-ingress-gateway
  namespace: knative-serving
spec:
  selector:
    istio: gateway  # Match your custom gateway selector
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - "*"
---
# Override the knative-local-gateway to use your custom gateway selector
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: knative-local-gateway
  namespace: knative-serving
spec:
  selector:
    istio: gateway  # Match your custom gateway selector
  servers:
    - port:
        number: 8081
        name: http
        protocol: HTTP
      hosts:
        - "*"
